miri shtsigel detailes

--- a/miriShtsigelDetailes.html
+++ b/miriShtsigelDetailes.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./miriShtsigelDetailes.html"></a>
+    <h1>מירי שציגל</h1>
 </body>
 </html>
