leah zalaznik details

--- a/leah-detailes.html
+++ b/leah-detailes.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sari-details.html">sari</a>
-    <a href="leah-detailes.html"></a>
+    <h1>name:leah zalaznik</h1>
 </body>
 </html>
