add chaya details

--- a/chaya.html
+++ b/chaya.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="chaya.html">Chaya</a>
+    <h1>name: chaya</h1>
+    <h2>phone: 0556762836</h2>
+    <h3>gmail: 0556762836c@gmail.com</h3>
 </body>
 </html>
