add Tzivi details

--- a/Tzivi-details.html
+++ b/Tzivi-details.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sari-details.html">sari</a>
-    <a href="Tzivi-details.html">sari</a>
+    <h1>name: Tzivi</h1>
 </body>
 </html>
