--- a/our-project.html
+++ b/our-project.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="sari-details.html">sari</a>
-    <a href="leah-detailes.html"></a>
+    <a href="leah-detailes.html">Leah</a>
 </body>
 </html>
