--- a/shoshi-details.html
+++ b/shoshi-details.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sari-details.html">sari</a>
-    <a href="shoshi-details.html">shoshi</a>
+    <h1>name:shoshi packer</h1>
 </body>
 </html>
