leah rozenberg details

--- a/lea-rozenberg-details.html
+++ b/lea-rozenberg-details.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sari-details.html">sari</a>
-    <a href="leah-detailes.html"></a>
-    <a href="lea-rozenberg-details.html">lea rozenberg</a>
+    <h1>name: leah rozenberg</h1>
 </body>
 </html>
