--- a/ourProject.html
+++ b/ourProject.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>shula</h1>
-    
+    <a href="../shvavim-project/shuly.html"></a>
 </body>
 </html>
