--- a/our-project.html
+++ b/our-project.html
@@ -8,7 +8,7 @@
 <body>
     <a href="sari-details.html">sari</a>
     <a href="leah-detailes.html">Leah</a>
-    <a href="aliza.html">sari</a>
+    <a href="aliza.html">aliza</a>
 
 </body>
 </html>
