add moriya detaile

--- a/moriya.html
+++ b/moriya.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sari-details.html">sari</a>
-    <a href="moriya.html">moriya</a>
-
+    <h1>name: moriya gevaaaaaaaaaaaaaa</h1>
 </body>
 </html>
