--- a/leah-detailes.html
+++ b/leah-detailes.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leah Zalaznik</title>
 </head>
 <body>
-    <h1>name:Leah Zalaznik</h1>
+    <h1>name:Leah Zalaznik!!!!!!❤💕</h1>
 </body>
 </html>
