--- a/leah-detailes.html
+++ b/leah-detailes.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sari-details.html">sari</a>
+    <h1>name:Leah Zalaznik</h1>
 </body>
 </html>
