--- a/aliza.html
+++ b/aliza.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>aliza</title>
 </head>
 <body>
-    <a href="sari-details.html">sari</a>
+    <h2>name: aliza</h2>
+    <h3>lastname: cohen</h3>
+    <h3>city: safed</h3>
+    <h3>phone number: 0583265461</h3>
+
 </body>
 </html>
