--- a/our-project.html
+++ b/our-project.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./miriShtsigelDetailes.html">miri</a>
+    <a href="./miriShtsigelDetailes.html">מירי</a>
     <a href="sari-details.html">sari</a>
     <a href="leah-detailes.html">Leah</a>
     <a href="aliza.html">aliza</a>
