--- a/our-project.html
+++ b/our-project.html
@@ -12,5 +12,6 @@
     <a href="Tzivi-details.html">sari</a>
     <a href="leah-detailes.html">Leah</a>
     <a href="aliza.html">aliza</a>
+    <a href="Tamar.html">Tamar</a>
 </body>
 </html>
