--- a/aliza.html
+++ b/aliza.html
@@ -8,7 +8,7 @@
 <body>
     <h2>name: aliza</h2>
     <h3>lastname: cohen</h3>
-    <h3>city: safed</h3>
+    <h3>city: safed- העיר שאין כמוה בעולם</h3>
     <h3>phone number: 0583265461</h3>
 
 </body>
