--- a/our-project.html
+++ b/our-project.html
@@ -11,5 +11,6 @@
     <a href="sari-details.html">sari</a>
     <a href="leah-detailes.html">Leah</a>
     <a href="aliza.html">aliza</a>
+    <a href="EstiZelt.html">Esti</a>
 </body>
 </html>
