--- a/our-project.html
+++ b/our-project.html
@@ -9,9 +9,8 @@
     <a href="./miriShtsigelDetailes.html">מירי</a>
     <a href="chaya.html">Chaya</a>
     <a href="sari-details.html">sari</a>
-
     <a href="moriya.html">moriya</a>
-    <a ghref="shoshi-details.html">shoshi</a>
+    <a href="shoshi-details.html">shoshi</a>
     <a href="leah-detailes.html"></a>
     <a href="lea-rozenberg-details.html">lea rozenberg</a>
     <a href="Tzivi-details.html">sari</a>
