--- a/our-project.html
+++ b/our-project.html
@@ -11,7 +11,7 @@
     <a href="sari-details.html">sari</a>
     <a href="shoshana-details.html">Shoshana</a>
     <a href="moriya.html">moriya</a>
-    <a ghref="shoshi-details.html">shoshi</a>
+    <a href="shoshi-details.html">shoshi</a>
     <a href="leah-detailes.html"></a>
     <a href="lea-rozenberg-details.html">lea rozenberg</a>
     <a href="Tzivi-details.html">Tzivi</a>
