--- a/shoshi-details.html
+++ b/shoshi-details.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>name:shoshi packer</h1>
+    <h1>name:shoshi packer😂🤣👍✌️💕💣❤️❤️❤️❤️❤️❤️</h1>
 </body>
 </html>
