--- a/our-project.html
+++ b/our-project.html
@@ -18,5 +18,6 @@
     <a href="leah-detailes.html">Leah</a>
     <a href="aliza.html">aliza</a>
     <a href="EstiZelt.html">Esti</a>
+    <a href="tehila-details.html">tehila</a>
 </body>
 </html>
